# polyglot-teachers

./: .gitignore  .gitmodules  .singularity_tips.md  DOCUMENTATION.md  Dockerfile  README.md  mtep.def  pyproject.toml  requirements-isambard.txt  requirements.txt
analysis/: README.md  ablation_results.py  base_model_effect.py  data_scale_effect.py  inspect_dataset.py  language_correl.py  model_scale.py  pgscore_robustness.py  principal_components.py  stronger_maybe_better.py  translation_ablation.py  weight_robustness.py
analysis/utils/: plot_theme.py
assets/: DATASET_CARD.md  MODEL_CARD.md  TEMPLATE_MODEL_CARD.md
experiments/: README.md  create_synthetic_datasets_vllm.sh  csd3_create_synthetic_datasets.sh  csd3_create_synthetic_datasets_vllm.sh  csd3_get_intrinsic_metrics.sh  launch_vscode_tunnel.sh  local_get_intrinsic_metrics.sh  ltl_create_synthetic_datasets.sh  ltl_create_synthetic_datasets_vllm.sh  ltl_finetune_student_model_unsloth.sh  ltl_get_intrinsic_metrics.sh  run_container.slurm  slurm_submit.isambard  slurm_submit.ltl  slurm_submit.peta4_icelake  slurm_submit.wilkes-csd3  slurm_submit_sif.isambard
experiments/jobs/: create_synthetic_datasets.sh  data_scale_effect.sh  eval_base_model.sh  eval_ref_model.sh  eval_student_models.sh  eval_tagalog_models.sh  eval_teacher_models.sh  finetune_student_model_unsloth.sh  finetune_student_model_unsloth_ddp.sh  get_intrinsic_metrics.sh  get_intrinsic_metrics_local.sh  get_intrinsic_metrics_sif.sh  sync_isambard.sh  translate_nllb.sh  translation_effect.sh  upload_best_models.sh
experiments/tagalog_ablations/: 01_public_to_synthetic.sh  02_bad_teacher_good_teacher.sh  03_match_model_families.sh  04_increase_data_scale.sh  05_increase_model_scale.sh
notebooks/: 2025-10-28-data-preparation.ipynb  README.md
notebooks/2025-11-24-data-quality-metrics/: 01_load_and_parse_data.ipynb  02_visualize_quality_metrics.ipynb  visualize_quality_metrics.ipynb
notebooks/2025-12-08-teacher-model-perf/: 01_bechmark_performance.ipynb  benchmarked_teacher_model_performance.json
notebooks/2026-01-12-curating-tagalog-data/: 2026-01-12-curating-tagalog-data.ipynb
plot/: lang_resource.py  language_correl.py  model_scale.py  model_scale_corr.py  principal_components.py  stronger_maybe_better.py
plot/utils/: metadata.py  model_info.py  plot_theme.py
results/: base_model_correlations.jsonl  pca_results.json  pg_scores_base_gemma3-4b.jsonl  pg_scores_base_llama3-8b.jsonl  pg_scores_base_olmo3.jsonl  pg_scores_base_qwen3-8b.jsonl  pg_scores_data_scaling.jsonl  pg_scores_translate_abl.jsonl
results/tgl_ablations/: 00_initial_10k-Public-tl.json  01_synth-bigger_10k-GPT-4o.json  02_better-teacher_10k-AyaExp.json  03_family-matching_10k-Gemma3.json  04_data-scale_25k-Gemma3.json  05_model-scale_25k-Gemma3-Big-12B.json  06_model-scale-v2_25k-Gemma3-Ultra-27B.json  scores_ljvmiranda921___details_msde-google_gemma-3-12b-pt-lora-4bit-tgl_25k-Gemma3-Big.json  scores_ljvmiranda921___details_msde-google_gemma-3-4b-pt-lora-4bit-tgl_10k-AyaExp.json  scores_ljvmiranda921___details_msde-google_gemma-3-4b-pt-lora-4bit-tgl_10k-Gemma3.json
scripts/: cleanup_files.py  consolidate_models.py  create_final_dataset.py  create_seed_dataset.py  export_final_dataset.py  export_model.py  finetune_tpu.py  finetune_tunix.py  finetune_unsloth.py  get_intrinsic_metrics.py  get_scores.py  lighteval_tasks.py  sample_for_annotation.py  synthesize_data.py  translate_nllb.py
scripts/analysis/: model_info.py
scripts/artifacts/: README.md  cleanup_files.py  consolidate_models.py  create_seed_dataset.py
scripts/utils/: constants.py  edit_model_rev.py  get_model_rev.py  llm_inference.py  prompts.py
singularity/: README.md  mtep.def  mtep_eval.def
