[project]
name = "mtep"
version = "0.1.0"
description = "Multilingual Teacher Evaluation Project"
readme = "README.md"
authors = [
    { name = "ljvmiranda921", email = "ljvmiranda@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bespokelabs-curator>=0.1.26",
    "ctranslate2>=4.6.0",
    "datasets>=3.0.2,<4.0.0",
    "langcodes>=3.5.0",
    "matplotlib>=3.10.7",
    "tiktoken>=0.12.0",
    "transformers>=4.57.1",
    "vllm>=0.11.0",
    "wheel>=0.45.1",
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"] # line too long (black is taking care of this)
line-length = 88
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 9

[tool.black]
line-length = 88

[tool.uv.sources]
bespokelabs-curator = { git = "https://github.com/ljvmiranda921/curator" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "ipython",
    "ipykernel",
]
