[project]
name = "mtep"
version = "0.1.0"
description = "Multilingual Teacher Evaluation Project"
readme = "README.md"
authors = [
    { name = "ljvmiranda921", email = "ljvmiranda@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "bespokelabs-curator>=0.1.26",
    "ctranslate2>=4.6.0",
    "datasets>=3.0.2,<4.0.0",
    "langcodes>=3.5.0",
    "llama-cpp-python>=0.3.16",
    "matplotlib>=3.10.7",
    "mistral-common>=1.8.5",
    "more-itertools>=10.8.0",
    "outlines>=0.0.46",
    "prometheus-eval",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "statsmodels>=0.14.6",
    "tiktoken>=0.12.0",
    "tornado==6.5.3",
    "trackio>=0.7.0",
    "transformers>=4.57.1",
    "trl>=0.23.0",
    "unsloth>=2025.11.1 ; sys_platform == 'linux'",
    "vllm>=0.10.1.1",
    "wheel>=0.45.1",
]

[project.optional-dependencies]
tpu = [
    "gcsfs>=2025.3.0",
    "google-tunix",
]
eval = [
    "lighteval>=0.10.0",
    "vllm>=0.10.0,<0.10.2",
]


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"] # line too long (black is taking care of this)
line-length = 88
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 9

[tool.black]
line-length = 88

[tool.uv]
conflicts = [
    [
      { extra = "tpu" },
      { extra = "eval" },
    ],
]

[tool.uv.sources]
bespokelabs-curator = { git = "https://github.com/ljvmiranda921/curator" }
prometheus-eval = { git = "https://github.com/ljvmiranda921/prometheus-eval", subdirectory = "libs/prometheus-eval" }
google-tunix = { git = "https://github.com/google/tunix", rev = "cc267fd9450b7b7400d7193a4beca07a037bd311" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "ipython",
    "ipykernel",
]
